--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ function MM_swapImage() { //v3.0
   <li class="ui-first-child ui-last-child">
      <a href="#Pagina3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
      <h2>CAUSAS Y CONSECUENCIAS</h2>
-     <p> Se muestran las causa y las consecuencias de la contaminacion</p>
+     <p> Se muestran las causa y las consecuencias de la contaminación</p>
    </a>
   </li>
   <li class="ui-first-child ui-last-child">
     <a href="#Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
     <h2>CONTAMINACIÓN EN MI COMUNIDAD</h2>
-   <p>Se muestra los tipos de contamincaion que hay en mi comunidad</p>
+   <p>Se muestra los tipos de contaminación que hay en mi comunidad</p>
    </a>
   </li>
   <li class="ui-first-child ui-last-child">
